2011-02-09  Alexander Pavlov  <apavlov@chromium.org>

        Unreviewed. Add Web Inspector stylesheet resource diff screenshot.

        * blog-files/inspector/css_rule_diff.png: Added.

2011-02-07  Alexander Pavlov  <apavlov@chromium.org>

        Unreviewed. Add Web Inspector warning 10x10 PNG, move files from r77801 into the inspector/ directory.

        * blog-files/inspector/css_as_authored.png: Renamed from Websites/webkit.org/blog-files/inspector-css-as-authored.png.
        * blog-files/inspector/css_autocomplete.png: Renamed from Websites/webkit.org/blog-files/inspector-css-autocomplete.png.
        * blog-files/inspector/css_unknown_properties.png: Renamed from Websites/webkit.org/blog-files/inspector-unknown-css-properties.png.
        * blog-files/inspector/warning_10x10.png: Added.

2011-02-07  Alexander Pavlov  <apavlov@chromium.org>

        Unreviewed. Add Web Inspector style editing screenshots.

        * blog-files/inspector-css-as-authored.png: Added.
        * blog-files/inspector-css-autocomplete.png: Added.
        * blog-files/inspector-unknown-css-properties.png: Added.

2011-01-21  David Levin  <levin@chromium.org>

        Reviewed by Darin Adler.

        Proposal: Require cross-organizational seconds for reviewer nominations
        https://bugs.webkit.org/show_bug.cgi?id=47597

        This changes the committer/reviewer policy to require an additional
        reviewer supporting a reviewer nomination to work for a different
        company and different project affiliation from the nominee.

        This means reviewer nominations would require four supporting reviewers,
        one of which knows the reviewer through the community (irc, email, bugs)
        ensuring that the nominee has the open-source collaboration skills
        we so highly value here in WebKit.

        * coding/commit-review-policy.html:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move JavaScriptCore to Source