@@ -1,3 +1,12 @@
+2011-02-26  David Levin  <levin@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Add style guidelines about comments from the unwritten rules email.
+        https://bugs.webkit.org/show_bug.cgi?id=55272
+
+        * coding/coding-style.html: Added the guidelines.
+
 2011-02-09  Alexander Pavlov  <apavlov@chromium.org>
 
         Unreviewed. Add Web Inspector stylesheet resource diff screenshot.
